[gd_scene load_steps=8 format=3 uid="uid://b30hpwlo6scxc"]

[ext_resource type="Script" path="res://player/fire_projectile.gd" id="1_mqyui"]
[ext_resource type="Texture2D" uid="uid://yhponh5q6p2o" path="res://assets/sprites/Fire blast.png" id="2_wgjtj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dkrop"]
radius = 10.0499

[sub_resource type="Animation" id="Animation_vsy5k"]
resource_name = "beginning_fire"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_hekm5"]
resource_name = "e_beginning_fire"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_w2kju"]
resource_name = "end_fire"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iow17"]
_data = {
"beginning_fire": SubResource("Animation_vsy5k"),
"e_beginning_fire": SubResource("Animation_hekm5"),
"end_fire": SubResource("Animation_w2kju")
}

[node name="FireProjectile" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_mqyui")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_dkrop")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iow17")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("2_wgjtj")
hframes = 6

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 24)
scale = Vector2(1, 0.95)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
